--- a/css/style.production.css
+++ b/css/style.production.css
@@ -4,7 +4,7 @@ body {
   font-size: 16px;
   line-height: 1.6;
   background-color: white;
-  color: #357b70;
+  color: #4f4b59;
   display: table;
   width: 100%;
 }
@@ -17,22 +17,12 @@ h1 {
 
 a {
   color: var (--primary-color);
-}
-
-a:visited {
-  /* visited link */
-  color: #05676e;
-}
-
-a:hover,
-a:focus {
-  /* No underllining when hovering over a link */
   text-decoration: none;
 }
 
 a:active {
   /* selected link */
-  color: #489c79;
+  color: #6f697c;
 }
 
 button {
@@ -44,7 +34,7 @@ button {
   font-family: inherit;
 
   /* styles the background color, font color, and the text decoration of the button */
-  background-color: #036;
+  background-color: #9f97b2;
   color: white;
   text-decoration: none;
 
@@ -66,7 +56,7 @@ button {
   font-family: inherit;
 
   /* styles the background color, font color, and the text decoration of the button */
-  background-color: #036;
+  background-color: #9f97b2;
   color: white;
   text-decoration: none;
 
@@ -79,6 +69,9 @@ button {
   transition: opacity 0.2;
 }
 
+a:hover,
+a:active,
+a:focus,
 button:hover,
 button:focus,
 .button:hover,
@@ -91,8 +84,8 @@ button:focus,
 }
 
 .button_secondary {
-  background-color: #e0b354;
-  color: #2b2b2b;
+  background-color: #efcbcd;
+  color: #4f4b59;
 }
 
 .navigation-list__item--active {
@@ -113,6 +106,11 @@ button:focus,
   border-radius: 50%;
 }
 
+.credit-link {
+  display: block;
+  text-align: center;
+}
+
 .page-footer {
   clear: both;
   display: table-row;
@@ -120,11 +118,28 @@ button:focus,
   text-align: center;
 }
 
-.profile,
-.about-me,
+.profile {
+  max-width: 700px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.about-me {
+  max-width: 700px;
+  margin: 0 auto;
+  text-align: center;
+}
+
 .contact {
   max-width: 700px;
   margin: 0 auto;
+  text-align: center;
+}
+
+.work {
+  max-width: 700px;
+  margin: 0 auto;
+  text-align: center;
 }
 
 * {
@@ -168,10 +183,42 @@ button:focus,
   height: auto;
   margin-right: 40px;
   border-radius: 50%;
+  text-align: center;
+}
+
+table {
+  border: 1px solid #4f4b59;
+  border-collapse: collapse;
+  padding: auto;
+  text-align: center;
+}
+
+th {
+  border: 1px solid #4f4b59;
+  border-collapse: collapse;
+  padding: auto;
+  text-align: center;
+}
+
+td {
+  border: 1px solid #4f4b59;
+  border-collapse: collapse;
+  padding: auto;
+  text-align: center;
+}
+
+.about-me-table {
+  margin: 0 auto;
 }
 
 .sun {
   animation: 8s color-change infinite alternate linear;
+}
+
+#contact-form {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 
 @keyframes color-change {
